--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,8 +20,8 @@ data_generation:
 
 model:
   d_model: 64
-  num_heads: 2
-  num_layers: 4
+  num_heads: 4
+  num_layers: 6
   d_ff: 94
   max_seq_length: 128
   dropout: 0.1
@@ -29,10 +29,10 @@ model:
 
 training:
   learning_rate: 1e-4
-  batch_size: 32
-  max_epochs: 100
+  batch_size: 125
+  max_epochs: 120
   weight_decay: 1e-5
-  warmup_steps: 1000
+  warmup_steps: 300
   gradient_clip_val: 1.0
 
 data:
@@ -50,3 +50,26 @@ paths:
   data_dir: "./temp"
   model_dir: "./model"
   checkpoint_dir: "./checkpoints"
+
+# Hydra configuration
+defaults:
+  - _self_
+  - override hydra/sweeper: optuna
+
+# Optuna sweeper configuration
+hydra:
+  sweeper:
+    sampler:
+      _target_: optuna.samplers.TPESampler
+      seed: 123
+    direction: minimize
+    study_name: path_prediction_optimization
+    storage: null
+    n_trials: 50
+    n_jobs: 1
+    params:
+      model.d_model: choice(64, 128, 256)
+      model.num_heads: choice(4, 8, 16)
+      model.num_layers: choice(3, 6, 9)
+      model.d_ff: choice(128, 256, 512)
+      training.learning_rate: range(1e-4, 1e-3)
