--- a/config/config.yaml
+++ b/config/config.yaml
@@ -28,11 +28,11 @@ model:
   vocab_size: null  # Will be computed as num_horizontal * num_vertical
 
 training:
-  learning_rate: 1e-4
-  batch_size: 125
-  max_epochs: 120
+  learning_rate: 1e-3
+  batch_size: 256
+  max_epochs: 3
   weight_decay: 1e-5
-  warmup_steps: 300
+  warmup_steps: 1000
   gradient_clip_val: 1.0
 
 data:
@@ -54,22 +54,28 @@ paths:
 # Hydra configuration
 defaults:
   - _self_
-  - override hydra/sweeper: optuna
+  - override hydra/launcher: ray
+  - override hydra/sweeper: basic
 
+# Simple variables - just set these:
+num_concurrent_runs: 9                 # X = how many jobs you want running simultaneously  
+num_gpus: 2                           # Y = GPUs you're giving to Ray (CUDA_VISIBLE_DEVICES count)
+vram_alloc_per_job: 3e9     
+cpus_per_job: 2                       # CPUs each job needs       
 # Optuna sweeper configuration
 hydra:
+  launcher:
+    ray:
+      init:
+        num_cpus: ${eval:"${num_concurrent_runs} * ${cpus_per_job}"}     # X * 2 CPUs per job
+        num_gpus: ${num_gpus}                                 # Y total GPUs
+      remote:
+        num_cpus: ${cpus_per_job}                      
+        num_gpus: ${eval:"${num_gpus} / ${num_concurrent_runs}"}  # Y/X = GPU per job
+        memory: ${vram_alloc_per_job}                  
+
   sweeper:
-    sampler:
-      _target_: optuna.samplers.TPESampler
-      seed: 123
-    direction: minimize
-    study_name: path_prediction_optimization
-    storage: null
-    n_trials: 50
-    n_jobs: 1
     params:
-      model.d_model: choice(64, 128, 256)
-      model.num_heads: choice(4, 8, 16)
-      model.num_layers: choice(3, 6, 9)
-      model.d_ff: choice(128, 256, 512)
-      training.learning_rate: range(1e-4, 1e-3)
+      model.d_model: 64, 128, 256
+      model.num_heads: 4, 8, 16
+      training.learning_rate: 1e-3, 5e-2, 2e-3
