--- a/config/config.yaml
+++ b/config/config.yaml
@@ -30,7 +30,7 @@ model:
 training:
   learning_rate: 1e-3
   batch_size: 256
-  max_epochs: 3
+  max_epochs: 10
   weight_decay: 1e-5
   warmup_steps: 1000
   gradient_clip_val: 1.0
@@ -58,10 +58,11 @@ defaults:
   - override hydra/sweeper: basic
 
 # Simple variables - just set these:
-num_concurrent_runs: 9                 # X = how many jobs you want running simultaneously  
-num_gpus: 2                           # Y = GPUs you're giving to Ray (CUDA_VISIBLE_DEVICES count)
+num_concurrent_runs: 4                 # X = how many jobs you want running simultaneously  
+num_gpus: 4                           # Y = GPUs you're giving to Ray (CUDA_VISIBLE_DEVICES count)
 vram_alloc_per_job: 3e9     
-cpus_per_job: 2                       # CPUs each job needs       
+cpus_per_job: 2                       # CPUs each job needs   
+
 # Optuna sweeper configuration
 hydra:
   launcher:
@@ -76,6 +77,7 @@ hydra:
 
   sweeper:
     params:
-      model.d_model: 64, 128, 256
-      model.num_heads: 4, 8, 16
-      training.learning_rate: 1e-3, 5e-2, 2e-3
+      model.d_model: 64, 64, 64, 64, 64
+      model.num_heads: 4, 4
+      # training.learning_rate: 1e-3, 5e-2
+      # training.warmup_steps: 1000, 2000, 3000
