--- a/config/config.yaml
+++ b/config/config.yaml
@@ -31,7 +31,7 @@ model:
 training:
   learning_rate: 1e-3
   batch_size: 256
-  max_epochs: 10
+  max_epochs: 3
   weight_decay: 1e-5
   warmup_steps: 1000
   gradient_clip_val: 1.0
@@ -80,6 +80,6 @@ hydra:
     params:
       model.d_model: 512
       model.num_heads: 4
-      model.num_layers: 6, 8, 12
+      model.num_layers: 6, 8
       # training.learning_rate: 1e-3, 5e-2
       # training.warmup_steps: 1000, 2000, 3000
