--- a/config/config.yaml
+++ b/config/config.yaml
@@ -31,7 +31,7 @@ model:
 training:
   learning_rate: 1e-3
   batch_size: 256
-  max_epochs: 3
+  max_epochs: 20
   weight_decay: 1e-5
   warmup_steps: 1000
   gradient_clip_val: 1.0
@@ -43,7 +43,7 @@ data:
   num_workers: 4
 
 logging:
-  project_name: "path_prediction"
+  project_name: "path_prediction_evolution"
   experiment_name: "transformer_baseline"
   log_every_n_steps: 50
 
@@ -78,8 +78,8 @@ hydra:
 
   sweeper:
     params:
-      model.d_model: 512
+      model.d_model: 256
       model.num_heads: 4
-      model.num_layers: 6, 8
-      # training.learning_rate: 1e-3, 5e-2
-      # training.warmup_steps: 1000, 2000, 3000
+      model.num_layers: 6, 12
+      training.learning_rate: 1e-3, 5e-2
+      training.warmup_steps: 1000, 2000
