--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,7 +15,7 @@ data_generation:
   test:
     num_paths: 2000
   graph_path: ${graph_generation.output.file_path}
-  output_dir: "."
+  output_dir: "temp"
 
 
 model:
